Fix formatting in mobile media query

--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ footer {
 @media (max-width: 900px) {
     .blog-section {
         width: 90%;
+       }
 }
 /* ========================================= */
 /*        KONTAKT – stil samo za ovu stranu  */
